// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CardWrapper component should accept a backgroundColor 1`] = `
.c0 {
  background: salmon;
  border-radius: 16px;
  margin: 0.75rem 1rem;
  box-shadow: 0px 5px 18px rgba(0,0,0,0.1);
}

<div
  className="c0 ui-kit.card.CardWrapper"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept additional props 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 16px;
  margin: 0.75rem 1rem;
  box-shadow: 0px 5px 18px rgba(0,0,0,0.1);
}

<div
  className="c0 ui-kit.card.CardWrapper"
  role="article listitem"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept and render passed in styles 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 16px;
  margin: 0.75rem 1rem;
  box-shadow: 0px 5px 18px rgba(0,0,0,0.1);
}

<div
  className="c0 ui-kit.card.CardWrapper"
  style={
    Object {
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
>
  Boom!
</div>
`;

exports[`the CardWrapper component should render 1`] = `
.c0 {
  background: #FFFFFF;
  border-radius: 16px;
  margin: 0.75rem 1rem;
  box-shadow: 0px 5px 18px rgba(0,0,0,0.1);
}

<div
  className="c0 ui-kit.card.CardWrapper"
>
  Boom!
</div>
`;
